# MoE-LLaVA

./: .gitignore  README.md  auto_env_setup.sh  download_checkpoints.py  environment.yml  pyproject.toml
moellava/: submitit_finetune_repa_moe.py
moellava/eval/: model_vqa_loader.py  model_vqa_science.py
moellava/model/: __init__.py  builder.py  llava_arch.py
moellava/model/language_model/: llava_qwen_moe.py  llava_stablelm_moe.py
moellava/model/language_model/qwen/: modeling_qwen.py
moellava/model/language_model/stablelm/: modeling_stablelm_epoch.py
moellava/train/: llava_trainer.py  train.py
scripts/v1/eval/moe_llava/: sqa.sh
scripts/v1/eval/repa_moe_llava/: mmbench.sh  sqa.sh  sqa_virga.sh  vqav2.sh
scripts/v1/qwen/: finetune_repa_moe.sh  pretrain.sh  virga_finetune_repa_moe_nccl.sh
scripts/v1/qwen/logs/: finetune_repa_moe_QWen_11626249_1.err  finetune_repa_moe_QWen_11626249_1.out  finetune_repa_moe_QWen_11629548_1_success_test.err  finetune_repa_moe_Qwen_11634104_1.err  finetune_repa_moe_Qwen_11634104_1.out  finetune_repa_moe_Qwen_11634104_2.err
scripts/v1/stablelm/: finetune_repa_moe.sh  log_finetune_repa_moe_11432956.out  log_finetune_repa_moe_11437402.err  log_finetune_repa_moe_11437402.out  log_finetune_repa_moe_11443184.err  log_finetune_repa_moe_11443401.err  log_finetune_repa_moe_11443401.out  log_finetune_repa_moe_11444220.out  log_finetune_repa_moe_11444583.err  virga_finetune_repa_moe.sh  virga_finetune_repa_moe_nccl.sh  virga_finetune_repa_moe_nccl_test.sh
scripts/v1/stablelm/logs/: full_model_finetune_repa_moe_nccl_11863094_1.err  (+38 more)
(+20 files in other folders)
